cockpit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 1800
  name: cockpit-service
  namespace: cockpit
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit-service
  namespace: cockpit
subsets:
  - addresses:
      - ip: XXX.XXX.XXX.XXX
    ports:
      - port: 9090
